update URL path